@@ -21,6 +21,10 @@ Extension Modules
 Library
 -------
 
+- unittest.TestCase.run() and unittest.TestSuite.run() can now be successfully
+  extended or overridden by subclasses.  Formerly, the subclassed method would
+  be ignored by the rest of the module.  (Bug #1078905).
+
 - the deprecated whrandom module was removed.  Use the random module instead.
 
 - heapq.nsmallest() and heapq.nlargest() now support key= arguments with
